refractor UI and Its components and Pages
